--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/demo
+spring.data.mongodb.uri=mongodb+srv://userxd:passxd@cluster0.3z6fa.mongodb.net/foro?retryWrites=true&w=majority
