--- a/web/package.json
+++ b/web/package.json
@@ -1,35 +1,40 @@
 {
-    "name": "react-redux-application",
-    "version": "1.0.0",
-    "description": "",
-    "keywords": [],
-    "main": "src/index.js",
-    "dependencies": {
-        "firebase": "^8.3.3",
-        "react": "16.12.0",
-        "react-dom": "16.12.0",
-        "react-firebase-hooks": "^3.0.3",
-        "react-hook-form": "^7.6.4",
-        "react-redux": "7.2.0",
-        "react-router-dom": "5.1.2",
-        "react-scripts": "3.0.1",
-        "redux": "4.0.5",
-        "redux-devtools-extension": "2.13.8",
-        "redux-thunk": "2.3.0"
-    },
-    "devDependencies": {
-        "typescript": "3.3.3"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject"
-    },
-    "browserslist": [
-        ">0.2%",
-        "not dead",
-        "not ie <= 11",
-        "not op_mini all"
-    ]
+  "name": "react-redux-application",
+  "version": "1.0.0",
+  "description": "",
+  "keywords": [],
+  "main": "src/index.js",
+  "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^34.0.0",
+    "@ckeditor/ckeditor5-react": "^5.0.0",
+    "@tinymce/tinymce-react": "^4.0.0",
+    "firebase": "^9.7.0",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.6.4",
+    "react-html-parser": "^2.0.2",
+    "react-redux": "7.2.0",
+    "react-router-dom": "5.1.2",
+    "react-scripts": "3.0.1",
+    "reactstrap": "^9.0.2",
+    "redux": "4.0.5",
+    "redux-devtools-extension": "2.13.8",
+    "redux-thunk": "2.3.0"
+  },
+  "devDependencies": {
+    "typescript": "3.3.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
