--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "@ckeditor/ckeditor5-build-classic": "^34.0.0",
     "@ckeditor/ckeditor5-react": "^5.0.0",
     "@tinymce/tinymce-react": "^4.0.0",
+    "bootstrap": "^5.1.3",
     "firebase": "^9.7.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
